--- a/style.css
+++ b/style.css
@@ -43,13 +43,6 @@
     display: flex;
 }
 
-#app{
-    border: 1px solid black;
-    margin: 10px;
-    padding: 10px;
-}
-
-
 .folder {
     background-color: teal;
     color:white;
@@ -103,4 +96,82 @@
 .text-file [action]:hover {
     color: blue;
     transform: scale(2);
+}
+
+#app{
+    border: 5px solid blue;
+    margin: 10px;
+}
+
+#app-title-bar {
+    display: flex;
+    background-color: cyan;
+    height: 40px;
+}
+
+#app-title {
+    width: 93%;
+    text-align: center;
+    border-right: 5px solid red;
+}
+
+#app-menu-bar {
+    display: flex;
+    background-color: teal;
+    height: 40px;
+}
+
+#app-body {
+    display: flex;
+    background-color:springgreen;
+    height: 500px;
+}
+
+.notepad-menu{
+    width: 100%;
+    padding: 5px;
+}
+
+.notepad-menu * {
+    margin: 0px 5px;
+    padding: 2px;
+    cursor: pointer;
+    border: 2px solid white;
+    border-radius: 5px;
+}
+
+.notepad-menu span {
+    vertical-align: bottom;
+    
+}
+
+.notepad-menu span:hover {
+    border: 2px solid black;
+    background-color: white;
+    color: teal;
+}
+
+
+.notepad-menu [pressed=true] {
+    border: 2px solid black;
+    background-color: white;
+    color: teal;
+}
+
+.notepad-menu input[type=color] {
+    width: 30px;
+}
+
+.notepad-menu select {
+    height: 30px;
+}
+
+.notepad-body {
+    height: 100%;
+    width: 100%;
+}
+
+.notepad-body textarea{
+    height: 100%;
+    width: 100%;
 }
